using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Domain.Entitys.Enuns
{
    public enum EStatus
    {
        Active = 1,
        Inactive = 2
    }

}
